# misis2023f-22-02-lebkova-m-d

./: .gitignore  CMakeLists.txt  codeforces.id  readme.md  status.md
docs/: report.md
prj.codeforces/: 0102b.cpp  0368b.cpp  0580c.cpp  0723b.cpp  1335b.cpp  1343c.cpp  1369c.cpp  1373a.cpp  1373b.cpp  1385c.cpp  1420b.cpp  1487b.cpp  1744c.cpp  1829d.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  noi_est.cpp
