add_executable(0368b 0368b.cpp)

add_executable(0580c 0580c.cpp)

add_executable(1343c 1343c.cpp)

add_executable(1420b 1420b.cpp)

add_executable(1385c 1385c.cpp)

add_executable(0723b 0723b.cpp)

add_executable(0102b 0102b.cpp)

add_executable(1373a 1373a.cpp)

add_executable(1829d 1829d.cpp)

add_executable(1744c 1744c.cpp)

add_executable(1487b 1487b.cpp)

add_executable(1369c 1369c.cpp)

add_executable(1335b 1335b.cpp)